--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,53 @@
-# root-level
-/node_modules
-/frontend/node_modules
-/backend/target
+# Dependencies
+**/node_modules/
+**/.pnp
+**/.pnp.*
+**/.yarn/*
+!**/.yarn/patches
+!**/.yarn/plugins
+!**/.yarn/releases
+!**/.yarn/versions
 
-# IDEs
-*.iml
-*.log
-*.class
-.DS_Store
+# Next.js / frontend build
+**/.next/
+**/out/
+**/build/
+**/coverage/
+**/.vercel/
 
-# env config
-*.env
+# Java / Maven / Gradle
+**/target/
+**/build/
+!.mvn/wrapper/maven-wrapper.jar
 
-# Spring Boot
+# IDEs / editors
+**/.idea/
+**/.vscode/
+**/*.iml
+**/*.ipr
+**/*.iws
+**/.classpath
+**/.project
+**/.settings/
+**/.factorypath
+**/.apt_generated
+**/.springBeans
+**/.sts4-cache/
+
+# OS / logs
+**/.DS_Store
+**/Thumbs.db
+**/*.log
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
+**/.pnpm-debug.log*
+
+# Env / secrets
+**/.env
+**/.env.*
 backend/src/main/resources/application.properties
 backend/src/main/resources/application.yml
+
+# Misc
+**/*.pem
